--- a/src/css/index.css
+++ b/src/css/index.css
@@ -18,29 +18,32 @@
 }
 
 body {
-  background-color: #000014;
+  width: 100vw;
+  background-color: #ffffff;
   margin: 0;
 }
 
 .nome_pagina {
-  width: 100%;
+  width: 100vw;
   background-color: #1e3e62;
   height: 120px;
 }
 
 .nome_pagina h1 {
   color: #ff8225;
-  font-size: 50px;
+  font-size: 4.827rem;
   text-align: center;
-  padding: 30px 0;
-  font-family: "Permanent Marker";
+  padding: 0;
+  text-shadow: -1px -1px 0 white, 1px -1px 0 white, -1px 1px 0 white,
+    1px 1px 0 white;
+  font-family: "Permanent Marker" !important;
+  line-height: 120px;
 }
 
 .descrizione_container {
-  width: 1200px;
+  width: 96vw;
   background-color: #eb5b00;
-  display: flex;
-  flex-direction: column;
+  display: block;
   margin: 28px;
   padding: 15px;
   border-radius: 15px;
@@ -49,59 +52,80 @@ body {
 }
 
 .info_sistema {
-  font-size: 30px;
+  font-size: 2.197rem;
   text-align: center;
 }
 
 .descrizione_sistema_solare {
   font-family: "Courier New", Courier, monospace;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 1.2rem;
   align-self: flex-start;
   padding: 10px;
 }
 
+.container_wrapper {
+  width: 100%;
+  overflow: hidden; /* Previene problemi con float */
+  min-width: 850px; /* Impedisce che gli elementi si accavallino */
+}
+
 .container_pianeti {
-  /* border: 1px solid black; */
-  /* width: 300px; */
   width: calc(25% - 25px);
-  display: inline-block;
+  float: left; /* Allinea gli elementi a sinistra */
   margin: 10px;
   height: 100%;
-  vertical-align: top;
 }
 
 .container_pianeti h2 {
   background-color: #56021f;
   color: #00eaff;
   padding: 10px 0;
-  font-size: 30px;
+  font-size: 2rem;
   margin: 0;
   text-align: center;
   height: 50px;
-  /* border: 1px solid black; */
+}
+
+/* Cambio colore solo se il cursore è sopra il div card_description */
+.container_pianeti:hover h2 {
+  background-color: #eb5b00;
+  color: #000000; /* Cambia il colore di h2 quando il mouse è sopra card_description */
 }
 
 .card_description {
   background-color: #000014;
   color: #e0e0e0;
   padding: 5px;
-  font-size: 15px;
-  /* border: 1px solid #888888; */
-  height: 513px;
+  font-size: 1rem;
+  min-height: 513px;
+}
+
+/* Clearfix migliorato per evitare problemi */
+.clearfix::after {
+  content: "";
+  display: block;
+  clear: both;
 }
 
 .info_pianeti {
+  border-radius: 15px;
+  background-color: #eb5b00;
+  margin-top: 3px;
   text-align: center;
-  color: #eb5b00;
-  font-size: 20px;
+  color: #ffffff;
+  font-size: 1.4rem;
+}
+
+.info_pianeti:hover span {
+  cursor: pointer;
+  color: #000000;
 }
 
 footer {
-  width: 1200px;
+  width: 96vw;
   background-color: #eb5b00;
-  display: flex;
-  flex-direction: column;
+  display: block;
   margin: 28px;
   padding: 15px;
   border-radius: 15px;
